# ImageRPC

./: .gitignore  .gitmodules  README.md
c++/: validate.sh
c++/src/: CMakeLists.txt
c++/src/rotate_client/: CMakeLists.txt  generate.sh  image.pb.cc  image.pb.h  main.cpp
docker/: Dockerfile  compile.sh  deploy.sh  image_pb2.py  image_pb2_grpc.py  install.sh  server.py  validate.sh
docker-c++/: CMakeLists.txt  Dockerfile  commands.txt  compile.sh  deploy.sh  generate.sh  image.grpc.pb.cc  image.grpc.pb.h  image.pb.h  image.proto  install.sh  rotate_server.cpp
dotnet/: validate.sh
dotnet/rotate_client/: Image.cs  ImageGrpc.cs  Program.cs  generate.sh  rotate_client.csproj  validate.sh
dotnet/rotate_client/Grpc.1.21.0/: .signature.p7s
grpc/: helloworld_client.ipynb  helloworld_server.ipynb  image.proto  image_pb2.py  image_pb2_grpc.py  rotate_client.ipynb  rotate_server.ipynb
zmq/: hwclient.ipynb  hwserver.ipynb  image_pb2.py  rotclient.ipynb  rotserver.ipynb
